--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 
 # Project exclude paths
 /out/
+/lib/annotations-20.1.0.jar
+/lib/annotations-20.1.0-sources.jar
+/lib/darcula.jar
+/lib/flatlaf-1.2.jar
