--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /lib/annotations-20.1.0-sources.jar
 /lib/darcula.jar
 /lib/flatlaf-1.2.jar
+/lib/fontchooser-2.4.jar
+/lib/fontchooser-2.4-sources.jar
