--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 
 jar {
 	manifest {
-		attributes "Main-Class": "org.riekr.jloga.Main"
+		attributes(
+				"Implementation-Version": "0.0.2",
+				"Main-Class": mainClassName,
+		)
 	}
 
 	from {
