--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,9 @@ dependencies {
 	implementation 'com.formdev:flatlaf:2.0.2'
 	implementation 'org.drjekyll:fontchooser:2.4'
 	implementation 'org.nanohttpd:nanohttpd-websocket:2.3.1'
+	implementation 'com.google.code.gson:gson:2.9.0'
 	testImplementation 'junit:junit:4.13.2'
-	compileOnly 'org.jetbrains:annotations:22.0.0'
+	compileOnly 'org.jetbrains:annotations:23.0.0'
 }
 
 jar {
