--- a/build.gradle
+++ b/build.gradle
@@ -60,13 +60,6 @@ jar {
 	}
 }
 
-launch4j {
-	// https://github.com/TheBoegl/gradle-launch4j
-	mainClassName = 'org.riekr.jloga.Main'
-	// convert icon.png -resize 256x256 -channel rgb -negate icon.ico
-	icon = "${projectDir}/src/main/resources/org/riekr/jloga/icon.ico"
-}
-
 tasks.register('fatJar', Jar) {
 	group "build"
 	manifest.from jar.manifest
@@ -76,6 +69,14 @@ tasks.register('fatJar', Jar) {
 	from {
 		configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
 	}
+}
+
+launch4j {
+	// https://github.com/TheBoegl/gradle-launch4j
+	mainClassName = 'org.riekr.jloga.Main'
+	// convert icon.png -resize 256x256 -channel rgb -negate icon.ico
+	icon = "${projectDir}/src/main/resources/org/riekr/jloga/icon.ico"
+	jarTask = fatJar
 }
 
 task updateFinos {
