--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ task updateFinos {
 		download.run { src "${repo}/perspective-viewer-datagrid"; dest "${local}/perspective-viewer-datagrid.js" }
 		download.run { src "${repo}/perspective-viewer-d3fc"; dest "${local}/perspective-viewer-d3fc.js" }
 		// you can set "wgetExec" in "gradle.properties" file in the same folder of this one (useful for cygwin)
+		delete(file("${local}/res"))
 		def wget = project.hasProperty('wgetExec') ? wgetExec : 'wget'
 		exec {
 			workingDir "${local}"
