Task renamed to updatePerspective ("finos" is the maintainer)

--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ launch4j {
 	downloadUrl 'https://adoptium.net/download'
 }
 
-task updateFinos {
+task updatePerspective {
 	// https://github.com/michel-kraemer/gradle-download-task
 	doLast {
 		def repo = "https://cdn.jsdelivr.net/npm/@finos"
