Added many themes

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ compileJava {
 
 dependencies {
 	implementation 'com.formdev:flatlaf:2.2'
+	implementation 'com.formdev:flatlaf-intellij-themes:2.2'
 	implementation 'org.drjekyll:fontchooser:2.4'
 	implementation 'org.nanohttpd:nanohttpd-websocket:2.3.1'
 	implementation 'com.google.code.gson:gson:2.9.0'
