--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,9 @@ compileJava {
 }
 
 dependencies {
-	implementation 'com.formdev:flatlaf:2.2'
-	implementation 'com.formdev:flatlaf-intellij-themes:2.2'
+	// flatlaf 2.2 has troubles with JSplitPane programmatic divider positioning
+	implementation 'com.formdev:flatlaf:2.1'
+	implementation 'com.formdev:flatlaf-intellij-themes:2.1'
 	implementation 'org.drjekyll:fontchooser:2.4'
 	implementation 'org.nanohttpd:nanohttpd-websocket:2.3.1'
 	implementation 'com.google.code.gson:gson:2.9.0'
