--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ jar {
 tasks.register('fatJar', Jar) {
 	group "build"
 	manifest.from jar.manifest
+	duplicatesStrategy = 'include'
 	archiveClassifier = 'all'
 	from sourceSets.main.output
 	dependsOn configurations.runtimeClasspath
