--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ java {
 	}
 }
 
+compileJava.options.encoding = 'UTF-8'
+
 /* Would be nice to use javafx for finos perspective integration but as of now webassembly and workers are not supported
    keeping definitions here for further reference */
 //	id "org.openjfx.javafxplugin" version "0.0.12"
@@ -101,7 +103,7 @@ launch4j {
 	downloadUrl 'https://adoptium.net/temurin/releases'
 }
 
-task updatePerspective {
+tasks.register('updatePerspective') {
 	// https://github.com/michel-kraemer/gradle-download-task
 	doLast {
 		def repo = "https://cdn.jsdelivr.net/npm/@finos"
