Removed sample data

--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ tasks.register('updatePerspective') {
 		download.run { src 'https://cdn.jsdelivr.net/npm/@finos/perspective-viewer-d3fc/dist/cdn/perspective-viewer-d3fc.js'; dest local }
 		download.run { src 'https://cdn.jsdelivr.net/npm/@finos/perspective/dist/cdn/perspective.cpp.wasm'; dest local }
 		download.run { src 'https://cdn.jsdelivr.net/npm/@finos/perspective-viewer/dist/cdn/perspective_bg.wasm'; dest local }
-		download.run { src 'https://cdn.jsdelivr.net/npm/superstore-arrow/superstore.arrow'; dest local }
+//		download.run { src 'https://cdn.jsdelivr.net/npm/superstore-arrow/superstore.arrow'; dest local }
 		download.run { src 'https://cdn.jsdelivr.net/npm/@finos/perspective/dist/cdn/perspective.worker.js'; dest local }
 
 		// you can set "wgetExec" in "gradle.properties" file in the same folder of this one (useful for cygwin)
