--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'edu.sc.seis.launch4j' version '2.5.3'
-	id 'de.undercouch.download' version '5.1.0'
+	id 'edu.sc.seis.launch4j' version '3.0.5'
+	id 'de.undercouch.download' version '5.5.0'
 }
 
 repositories {
@@ -92,9 +92,9 @@ launch4j {
 	copyConfigurable = []
 	version = myVersion
 	textVersion = 'v' + myVersion
-	copyright 'https://github.com/Riekr/jloga'
-	supportUrl 'https://github.com/Riekr/jloga/issues'
-	downloadUrl 'https://adoptium.net/temurin/releases'
+	setCopyright('https://github.com/Riekr/jloga')
+	setSupportUrl('https://github.com/Riekr/jloga/issues')
+	setDownloadUrl('https://adoptium.net/temurin/releases')
 }
 
 tasks.register('updatePerspective') {
