--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,6 @@ plugins {
 	id 'de.undercouch.download' version '5.6.0'
 }
 
-repositories {
-	mavenCentral()
-}
-
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
@@ -39,6 +35,9 @@ compileJava {
 }
 
 dependencies {
+	// https://jitpack.io/#bmTas/JRecord/
+	implementation 'com.github.bmTas:JRecord:c7926cba04'
+
 	// flatlaf 2.2 has troubles with JSplitPane programmatic divider positioning
 	implementation 'com.formdev:flatlaf:3.6.1'
 	implementation 'com.formdev:flatlaf-extras:3.6.1'
